docs/7.57/md/abapcondense.md
---
title: "CONDENSE"
description: |
  Short Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcondense_shortref.htm) Syntax CONDENSE text NO-GAPS. Effect The CONDENSE statement removes any leading and trailing blanks from the variable text. -   Without the optional NO-GAPS addition, all substrings that c
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcondense.htm"
abapFile: "abapcondense.htm"
keywords: ["do", "if", "try", "data", "abapcondense"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_statements.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: CONDENSE, ABAPCONDENSE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for i
mprovement:)

CONDENSE

[Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcondense_shortref.htm)

Syntax

CONDENSE text *\[*NO-GAPS*\]*.

Effect

The CONDENSE statement removes any leading and trailing blanks from the variable text.

-   Without the optional NO-GAPS addition, all substrings that contain nothing but blanks are replaced by exactly one blank.
-   With the optional NO-GAPS addition, all substrings that contain nothing but blanks are removed completely.

The data object text must be character-like. If the data object has a fixed length, the space created by condensing is padded with blanks on the right. If the data object is of the type string, its length is adapted to the result of the condensing.

Hint

A character string can also be condensed in an operand position using a [condense function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencondense_functions.htm) that includes the functions of the statement CONDENSE.

Example

The [flat structure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenflat_structure_glosry.htm "Glossary Entry") sentence contains only character-like components and can therefore be assigned to the string text. After the condensing using the statement CONDENSE, text contains She feeds you tea and oranges. Before condensing, the words in text are 30 places apart from one another.

DATA: BEGIN OF sentence,
        word1 TYPE c LENGTH 30 VALUE 'She',
        word2 TYPE c LENGTH 30 VALUE 'feeds',
        word3 TYPE c LENGTH 30 VALUE 'you',
        word4 TYPE c LENGTH 30 VALUE 'tea',
        word5 TYPE c LENGTH 30 VALUE 'and',
        word6 TYPE c LENGTH 30 VALUE 'oranges',
      END OF sentence,
      text TYPE string.
text = sentence.
CONDENSE text.